 * Added ability to run individual tests through tox (Benjamin Bach)
 * Collection listings are now ordered by name (Seb Brown)
 * Added `file_hash` field to documents (Karl Hobley, Dan Braghis)
 * Added last login to the user overview (Noah B Johnson)
 * Changed design of image editing page (Janneke Janssen, Ben Enright)
 * Fix: Query objects returned from `PageQuerySet.type_q` can now be merged with `|` (Brady Moe)
 * Fix: Add `rel="noopener noreferrer"` to target blank links (Anselm Bradford)
 * Fix: Additional fields on custom document models now show on the multiple document upload view (Robert Rollins, Sergey Fedoseev)
 * Fix: Help text is partially hidden when using a combination of BooleanField and FieldPanel in page model (Dzianis Sheka)
 * Fix: Allow custom logos of any height in the admin menu (Meteor0id)
 * Fix: Allow nav menu to take up all available space instead of scrolling (Meteor0id)
 * Fix: Redirects now return 404 when destination is unspecified or a page with no site (Hillary Jeffrey)
 * Fix: Refactor all breakpoint definitions, removing style overlaps (Janneke Janssen)
 * Fix: Missing comma in Draftail documentation (Alex Gleason)


2.3 LTS (23.10.2018)
~~~~~~~~~~~~~~~~~~~~

 * Added support for Django 2.1 (Ryan Verner, Matt Westcott)
 * Improved colour contrast (Coen van der Kamp, Naomi Morduch Toubman, Naa Marteki Reed, Edd Baldry, Ben Enright)
 * Added 'scale' image filter (Oliver Wilkerson)
 * Added meta tag to prevent search engines from indexing admin pages (Karl Hobley)
 * EmbedBlock now validates against recognised embed providers on save (Bertrand Bordage)
 * Made cache control headers on Wagtail admin consistent with Django admin (Tomasz Knapik)
 * Notification emails now include an "Auto-Submitted: auto-generated" header (Dan Braghis)
 * Image chooser panels now show alt text as title (Samir Shah)
 * Added `download_url` field to images in the API (Michael Harrison)